# tonic_rs

./: .dockerignore  .drone.yml  Cargo.toml  Dockerfile.helloworld_client  Dockerfile.helloworld_server  README.md
helloworld/: Cargo.toml  build.rs
helloworld/src/: client.rs  server.rs
