[package]
name = "helloworld"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
tokio = { version = "0.2.14", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2.0"
